# Analyze_Chess

./: .dockerignore  .gitignore  DEVELOPMENT_SUMMARY.md  Dockerfile  INSTALL.md  README.md  analyze_chess.py  analyze_chess_temp.py  app.py  app.py.backup  app.py.new  auto_git_save.py  create_shortcut.ps1  create_taskbar_shortcut.ps1  dev_start.bat  fix_syntax.py  fix_ui.py  launch_analyze_chess.bat  launch_chess_app.bat  launch_chess_simple.bat  launch_log.txt  pyproject.toml  requirements.txt  run_app.bat  setup.py  start_analyze_chess.bat  step1.py  step2.py  step3.py  update_app.py  update_app_targeted.py  update_ui.ps1  venv_packages.txt  web.config
.github/: repository-info.md
.github/workflows/: publish.yml
assets/: requirements.txt
backups/: vv1.2.0_20251022_152658.py  vv1.2.0_20251022_162739.py
