[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "analyze-chess"
version = "1.1.2"
description = "A comprehensive chess position analysis tool using Stockfish engine"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AprilLorDrake", email = "your-email@example.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Games/Entertainment :: Board Games",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "flask>=2.0.0",
    "python-chess>=1.999",
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/AprilLorDrake/Analyze_Chess"
Repository = "https://github.com/AprilLorDrake/Analyze_Chess"
Issues = "https://github.com/AprilLorDrake/Analyze_Chess/issues"

[project.scripts]
analyze-chess = "app:main"

[tool.setuptools]
packages = ["analyze_chess"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["assets/*", "bin/*", "*.bat", "*.ps1"]
